# ZeroLock-Allocator

./: .gitignore  CMakeLists.txt  Dockerfile  PrintStandard  PrintStandard.cpp  ProjectDoc.txt  README.md  RealTimeStockAnalysis.cpp  TODO.md  docker-compose.yml  trade_simulator  trade_simulator.cpp
benchmarks/: benchmark.cpp  comparison_bench.cpp  fragmentation_bench.cpp  multi_thread_bench.cpp  single_thread_bench.cpp
docs/: api_reference.md  design_document.md  performance_analysis.md
examples/: basic_usage.cpp
experiments/: block_header_usage.cpp  test_allocate.cpp  test_allocator.cpp  test_free.cpp  test_threads.cpp
experiments /: mmap_usage.cpp
include/: BlockHeader.hpp  allocate.hpp  allocator.hpp
include/allocator/: buddy_allocator.hpp  high_performance_allocator.hpp  lock_free_allocator.hpp  pool_allocator.hpp  slab_allocator.hpp  stack_allocator.hpp
include/utils/: atomic_utils.hpp  benchmark_utils.hpp  memory_utils.hpp
src/: allocate.cpp  allocator.cpp
src/allocator/: buddy_allocator.cpp  high_performance_allocator.cpp  lock_free_allocator.cpp  pool_allocator.cpp  pool_allocator_scratch.cpp  slab_allocator.cpp  stack_allocator.cpp
src/utils/: atomic_utils.cpp  benchmark_utils.cpp  memory_utils.cpp
tests/integration_tests/: CMakeLists.txt  allocator_integration_test.cpp
tests/stress_tests/: CMakeLists.txt  allocator_stress_test.cpp
tests/unit_tests/: CMakeLists.txt  allocator_basic_test.cpp  pool-allocator-unit-test.cpp
